feat: 入门Agent完善及Bug修复。